styles.css
body {
    margin: 0;
    background-color: grey;
}

#top-div {
    display: flex;
    justify-content: center;
    padding: 20px;
}

#size-button,
#clear-button {
    padding: 10px;
    margin: 10px;
}

#container {
    background-color: white;
    display: flex;
    flex-wrap: wrap;
    justify-content: center;
    margin: auto;
    height: 550px;
    width: 550px;
}

.single-block {
    width: calc(550px / 16);
    height: calc(550px / 16);
}

.single-block:hover {
    background-color: black;
}

